--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<meta http-equiv="refresh" content="0; url=https://quangphamsoftvn-github.firebaseapp.com/" />
+<!-- <meta http-equiv="refresh" content="0; url=https://quangphamsoftvn-github.firebaseapp.com/" /> -->
 
 <head>
     <meta charset="UTF-8">
