--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-<!-- <meta http-equiv="refresh" content="0; url=https://quangphamsoftvn-github.firebaseapp.com/" /> -->
 
 <head>
-    <meta charset="UTF-8">
-    <title>Redirect to a page</title>
-    <p><a href="https://quangphamsoftvn-github.firebaseapp.com/">Redirect</a></p>
+  <meta charset="UTF-8">
+  <title>Index</title>
+
 </head>
+
+<body>
+  <p>
+    <a href="https://quangphamsoftvn-github.firebaseapp.com/">Fire base test</a>
+  </p>
+</body>
 
 </html>
